# service/CartService.js
@@ -3,6 +3,45 @@
 let sqlDb = require("./DataLayer.js").database;
 
 /**
+ * Delete an item from the cart
+ * Delete the item itemId from the cart
+ *
+ * itemID Long ID of the item to remove
+ * no response value expected for this operation
+ **/
+exports.cartBookDELETE = function(itemID) {
+  return new Promise(function(resolve, reject) {
+    resolve();
+  });
+};
+
+
+/**
+ * Insert a book into the cart
+ *
+ * book Book
+ * no response value expected for this operation
+ **/
+exports.cartBookPOST = function(book) {
+  return new Promise(function(resolve, reject) {
+    resolve();
+  });
+};
+
+
+/**
+ * Empty the cart
+ *
+ * no response value expected for this operation
+ **/
+exports.emptyCartPUT = function() {
+  return new Promise(function(resolve, reject) {
+    resolve();
+  });
+};
+
+
+/**
  * View the content of the cart
  *
  * cartId Long 
